  - (zathor) [MuxWindow] added a unique title to every mux window. Feature request #2937578
  - (zathor) [MuxWindow] added a shortcut to every mux window. Feature request #1868046
  - (zathor) [VideoUtil] fixed a problem if two identical audio sources
             are beeing used in OneClick
  - (zathor) [AutoUpdateServerConfigWindow] new servers will be checked during add
  - (zathor) [Settings] hard wired the stable & development update servers.
             custom servers can be added if required

0.3.5.10
  - (sharktooth) [x264] Added 64:45 SAR option
  - (sharktooth) [MainForm.cs] Typo
  - (zathor) [Settings] added option for DGIndex(NV) to autoload VOB files
             incrementally. Default value is enabled. Feature request #2955909
  - (zathor) [Settings] added option to close MeGUI after encoding.
             Default value is still "Do nothing". Feature request #2954099
  - (zathor) [Settings] added option start the queue at program start.
             Default value is disabled. Feature request #1908749
  - (zathor) [JobUtil] display overwrite confirmation dialog for the output file
             during initial job creation if it is necessary. Feature request #3022005
  - (zathor) [OneClickEncoder] added support for DGIndexNV and DGAVCIndex

0.3.5.9
  - (sharktooth) [MainForm.cs] Added a big fat warning about patents and binary files when megui finds updates
  - (sharktooth) [x264] Added 2 new "Force SAR" options
  - (sharktooth) [x264] Enabled Trellis with no-cabac option (requires x264 rev 1703+)
  - (zathor) [FPSChooser] + [TargetSizeSCBox] fixed custom FPS and file size saving
  - (zathor) [LogItem] changed default log type to information
  - (zathor) [HDBDStreamExtractor] HdBrStreamExtractor.txt not created anymore
  - (zathor) [HDStreamExtractorIndexer] improved log handling
  - (zathor) [JobQueue] fixed load context menu option. Bug #3024349
  - (zathor) [MuxWindow] language and video name will be visible during load. Bug #3024349